[package]
edition = "2021"
name = "ogl"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
boxarray = { version = "0.1.0", path = "../boxarray" }
gl = "0.14.0"
glfw = { version = "*" }
rayon = "1.10.0"
voxell_rng = "0.5.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
strip = true

[profile.smallest]
inherits = "release"
opt-level = "z"

[profile.small]
inherits = "release"
opt-level = "s"
